Version 1.5
	Update software dependencies.
	Fix VirusScan bugs.

Version 1.4
	Improve HTML responsiveness.
	Add imageSetAnchor to HTMLView an use it for logo.
	Add @media screen and (max-width: 600px).
	Update software dependencies.	
	Use HTML dialog element.
	Fix: Rename references when renaming types and fields.

Version 1.3
	In Permissions class use isAllowed(type,action) method if "id" or "objects" is null or empty. 
	Add PermissionsAspect aspect to intercept the execution of the isAllowed(type,objects,action) method and execute isAllowed(type,action) if "objects" is null or empty.
	In exportTypes method if types is empty export all types.
	Add virusScan method to PostgreSQLNode and Console classes.
	Update software dependencies.
	Exclude Xerces in Maven to use OpenJDK version with international messages.
	Implement SerialView getField method.
	Use PostgreSQL JDBC integration with java.time data types.
	Get "jsonb" and "xml" columns as String class.

Version 1.2
	Move confirmation message to submit button in data-confirmation-message attribute.
	Move progress dialog code to createProgress function.
	Check if clear-binary-input element is not null before remove hidden class. 
	Change setFormInput to setFormAction.
	Add select data-url-parameter. Use changeURLParameter for lang, month, year and limit parameters.
	Change unload-confirmation class to data-show-unload-warning attribute. Add unload warning to insert form.
	Add nullable boolean field input.
	Add margins to field ranges, icons and search button.
	Add selectIndexAnchor event to near-selected-offset anchors.
	Add methods to TypeSettings.
	Add margin to logout-button.
	Add Javascript disabled warning.
	Add ClamAV antivirus scanning.
	Limit PostgreSQL exception message to 100 characters.
	Scape \ character in Document setValue and getValue.
	Simplify exception messages.
	Update software dependencies.