@@ -1,6 +1,8 @@
 Version 1.5
 	Update software dependencies.
 	Fix VirusScan bugs.
+	Improbe CalDAV support.
+	Add HTTP DELETE method.
 
 Version 1.4
 	Improve HTML responsiveness.
